force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__BenefitInformationText__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitInformationText__c</fullName>
    <label>Benefit Information</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitInformationText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>