force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__BenefitNotes__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitNotes__c</fullName>
    <label>Benefit Note</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitNotes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>