force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__BenefitPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitPeriodEndDate__c</fullName>
    <label>Benefit Period End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitPeriodEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>