force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__BenefitPeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitPeriodStartDate__c</fullName>
    <label>Benefit Period Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitPeriodStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>