force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__CoverageType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CoverageType__c</fullName>
    <label>Coverage Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CoverageType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>