force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__EmergencyTreatmentCopayAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmergencyTreatmentCopayAmount__c</fullName>
    <label>Emergency Treatment Copay Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmergencyTreatmentCopayAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>