force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__InNetworkIndividualDeductibleAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__InNetworkIndividualDeductibleAmount__c</fullName>
    <label>In Network Individual Deductible Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InNetworkIndividualDeductibleAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>