force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__InNetworkIndividualOutofPocketLimitAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__InNetworkIndividualOutofPocketLimitAmt__c</fullName>
    <label>In Ntwk Individual Outof Pocket Lmt Amt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InNetworkIndividualOutofPocketLimitAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>