force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__InNtwkIndividualOutofPocketRemainingAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__InNtwkIndividualOutofPocketRemainingAmt__c</fullName>
    <label>In Ntwk Individual OOP Remaining Amt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InNtwkIndividualOutofPocketRemainingAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>