force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__OutofNetworkCoinsuranceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutofNetworkCoinsuranceAmount__c</fullName>
    <label>Outof Network Coinsurance Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutofNetworkCoinsuranceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>