force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__OutofNetworkCoinsurancePercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutofNetworkCoinsurancePercent__c</fullName>
    <label>Outof Network Coinsurance Percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutofNetworkCoinsurancePercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>