force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__OutofNetworkFamilyDeductibleAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutofNetworkFamilyDeductibleAmount__c</fullName>
    <label>Outof Network Family Deductible Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutofNetworkFamilyDeductibleAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>