force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__OutofNtwkIndividualOutofPocketAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutofNtwkIndividualOutofPocketAmt__c</fullName>
    <label>Outof Ntwk Individual Outof Pocket Amt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutofNtwkIndividualOutofPocketAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>