force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__rel_1716726055485_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726055485_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CoverageBenefit_MemberId_map_Account_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>CoverageBenefit_MemberId_map_Account_rel</relationshipLabel>
    <relationshipName>rel_1716726055485_end</relationshipName>
    <type>Lookup</type>
</CustomField>