force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__rel_1716726059344_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726059344_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CoverageBenefit_MemberPlanId_map_Mem_rel</label>
    <referenceTo>ssot__MemberPlan__dlm</referenceTo>
    <relationshipLabel>CoverageBenefit_MemberPlanId_map_Mem_rel</relationshipLabel>
    <relationshipName>rel_1716726059344_end</relationshipName>
    <type>Lookup</type>
</CustomField>