force-app/main/default/objects/ssot__CoverageBenefit__dlm/fields/ssot__SourceSystemName__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceSystemName__c</fullName>
    <label>Source System Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceSystemName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>